// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checked Input States > default state 1`] = `
<body>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          class="yc-text-input__control yc-text-input__control_type_input"
          value=""
        />
      </span>
    </span>
  </div>
</body>
`;

exports[`Checked Input States > state with right content 1`] = `
<body>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          class="yc-text-input__control yc-text-input__control_type_input"
          value=""
        />
      </span>
    </span>
  </div>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          class="yc-text-input__control yc-text-input__control_type_input"
          value="test value"
        />
      </span>
    </span>
  </div>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_state_error yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          aria-describedby="g-:r7:"
          aria-invalid="true"
          class="yc-text-input__control yc-text-input__control_type_input"
          value="test value"
        />
      </span>
      <div
        class="yc-outer-additional-content"
      >
        <div
          class="yc-outer-additional-content__error"
          data-qa="control-error-message-qa"
          id="g-:r7:"
        >
          Error!
        </div>
      </div>
    </span>
  </div>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_pin_round-round yc-text-input_has-right-content _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          class="yc-text-input__control yc-text-input__control_type_input"
          value="test value"
        />
        <div
          class="yc-text-input__additional-content yc-text-input__additional-content_placement_right"
        >
          <div
            class="_input__right-content_3058db"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-5A1.5 1.5 0 0 1 4 12.5v-9A1.5 1.5 0 0 1 5.5 2h5A1.5 1.5 0 0 1 12 3.5Zm-1.5-3a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h5ZM6.25 11a.75.75 0 0 0 0 1.5h3.5a.75.75 0 0 0 0-1.5h-3.5Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </span>
    </span>
  </div>
</body>
`;

exports[`Checked Input States > state with value 1`] = `
<body>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          class="yc-text-input__control yc-text-input__control_type_input"
          value=""
        />
      </span>
    </span>
  </div>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          class="yc-text-input__control yc-text-input__control_type_input"
          value="test value"
        />
      </span>
    </span>
  </div>
</body>
`;

exports[`Checked Input States > state with value and error 1`] = `
<body>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          class="yc-text-input__control yc-text-input__control_type_input"
          value=""
        />
      </span>
    </span>
  </div>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          class="yc-text-input__control yc-text-input__control_type_input"
          value="test value"
        />
      </span>
    </span>
  </div>
  <div>
    <span
      class="yc-text-input yc-text-input_view_normal yc-text-input_size_xl yc-text-input_state_error yc-text-input_pin_round-round _input_3058db"
    >
      <span
        class="yc-text-input__content"
      >
        <input
          aria-describedby="g-:r7:"
          aria-invalid="true"
          class="yc-text-input__control yc-text-input__control_type_input"
          value="test value"
        />
      </span>
      <div
        class="yc-outer-additional-content"
      >
        <div
          class="yc-outer-additional-content__error"
          data-qa="control-error-message-qa"
          id="g-:r7:"
        >
          Error!
        </div>
      </div>
    </span>
  </div>
</body>
`;
